buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
            maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
            mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
            classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
        }
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.spongepowered.mixin'

String lv_version = "${mc_version}-${type_version}${version_mod}"

group = 'com.algorithmlx'
version = "${lv_version}"

java {
    archivesBaseName = 'LiaVeres'
    toolchain.languageVersion = JavaLanguageVersion.of(16)
}

minecraft {
    mappings channel: 'official', version: '1.17.1'
    runs {
        client {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'

            property 'forge.logging.console.level', 'debug'

            arg "-mixin.config=LiaVeres.mixins.json"

            mods {
                LiaVeres {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'

            property 'forge.logging.console.level', 'debug'

            arg "-mixin.config=LiaVeres.mixins.json"

            mods {
                LiaVeres {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'

            property 'forge.logging.console.level', 'debug'

            args '--mod', 'LiaVeres', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')

            mods {
                LiaVeres {
                    source sourceSets.main
                }
            }
        }
    }
}

mixin {
    add sourceSets.main, "LiaVeres.refmap.json"
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven {
        name = "Progwml6 maven"
        url = "https://dvs1.progwml6.com/files/maven/"
    }
    maven {
        name = "ModMaven"
        url = "https://modmaven.k-4u.nl"
    }
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.17.1-37.0.104'

    implementation fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api")
    implementation fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}")

    annotationProcessor 'org.spongepowered:mixin:0.8:processor'
}
jar {
    manifest {
        attributes([
                            "Specification-Title": "LiaVeres",
                            "Specification-Vendor": "AlgorithmLX",
                            "Specification-Version": "1", // We are version 1 of ourselves
                            "Implementation-Title": project.name,
                            "Implementation-Version": project.jar.archiveVersion,
                            "Implementation-Vendor": "AlgorithmLX",
                            "MixinConfigs": "LiaVeres.mixins.json",
                            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

jar.finalizedBy('reobfJar')

compileJava.options.encoding = 'UTF-8'

tasks.withType(JavaCompile){
    options.encoding = 'UTF-8'
}